# secretsentry

./: .gitignore  CHANGELOG.md  LICENSE  MANIFEST.in  debug.py  pyproject.toml  readme.md  requirements.txt  test_ml_detection.py
secretsentry/: __init__.py  cli.py  ml_detector.py  scanner.py
tests/: __init__.py  test_scanner.py
